--- a/index.html
+++ b/index.html
@@ -840,6 +840,23 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                        <div class="team-circle text-center">
+                                            <div class="team-photo">
+                                                <img src="marketer.png" alt="">
+                                                <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"
+                                                      class="expand-trigger content-popup"></span></div>
+                                            <div class="team-info">
+                                                <h5 class="team-name">Adam Basque</h5>
+                                                <span class="team-title">Marketing @CanadianCrypto</span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <!--<div class="wpb_text_column wpb_content_element  text-center">-->
                         <!--<div class="wpb_wrapper">-->
@@ -1012,7 +1029,7 @@
 <section class="vc_rows wpb_row vc_row-fluid section-bg-alt">
     <div class="container">
         <div class="row">
-            <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-md-offset-2 vc_col-md-8">
+            <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-md-6">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="vc_tta-container" data-vc-action="collapse">
@@ -1297,194 +1314,17 @@
 
                                             </div>
                                         </div>
-                                        <!--<div class="vc_tta-panel" id="1520927153053-165c0f84-efe6"-->
-                                             <!--data-vc-content=".vc_tta-panel-body">-->
-                                            <!--<div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title"><a-->
-                                                    <!--href="#1520927153053-165c0f84-efe6" data-vc-accordion=""-->
-                                                    <!--data-vc-container=".vc_tta-container"><span-->
-                                                    <!--class="vc_tta-title-text">Client</span></a></h4></div>-->
-                                            <!--<div class="vc_tta-panel-body">-->
-                                                <!--<div class="accordion" id="accordion-766">-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-211">-->
-                                                                    <!--Who formed us in his own image?<span-->
-                                                                        <!--class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-211" class="collapse show"-->
-                                                             <!--data-parent="#accordion-766">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="collapsed" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-212">-->
-                                                                    <!--While the lovely valley teems with vapour?<span-->
-                                                                        <!--class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-212" class="collapse "-->
-                                                             <!--data-parent="#accordion-766">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="collapsed" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-213">-->
-                                                                    <!--Which was created for the bliss of souls like-->
-                                                                    <!--mine?<span class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-213" class="collapse "-->
-                                                             <!--data-parent="#accordion-766">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="collapsed" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-214">-->
-                                                                    <!--Wonderful serenity has taken of my entire-->
-                                                                    <!--soul?<span class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-214" class="collapse "-->
-                                                             <!--data-parent="#accordion-766">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                <!--</div>-->
-
-                                            <!--</div>-->
-                                        <!--</div>-->
-                                        <!--<div class="vc_tta-panel" id="1520927169441-fbd46c2d-7973"-->
-                                             <!--data-vc-content=".vc_tta-panel-body">-->
-                                            <!--<div class="vc_tta-panel-heading"><h4 class="vc_tta-panel-title"><a-->
-                                                    <!--href="#1520927169441-fbd46c2d-7973" data-vc-accordion=""-->
-                                                    <!--data-vc-container=".vc_tta-container"><span-->
-                                                    <!--class="vc_tta-title-text">Legal</span></a></h4></div>-->
-                                            <!--<div class="vc_tta-panel-body">-->
-                                                <!--<div class="accordion" id="accordion-765">-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-686">-->
-                                                                    <!--Illustrated magazine and housed in a nice?<span-->
-                                                                        <!--class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-686" class="collapse show"-->
-                                                             <!--data-parent="#accordion-765">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="collapsed" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-687">-->
-                                                                    <!--Samsa was a travelling salesman and above it-->
-                                                                    <!--there?<span class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-687" class="collapse "-->
-                                                             <!--data-parent="#accordion-765">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="collapsed" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-688">-->
-                                                                    <!--Slightly domed and divided by arches?<span-->
-                                                                        <!--class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-688" class="collapse "-->
-                                                             <!--data-parent="#accordion-765">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                    <!--<div class="card">-->
-                                                        <!--<div class="card-header">-->
-                                                            <!--<h5>-->
-                                                                <!--<a class="collapsed" data-toggle="collapse"-->
-                                                                   <!--data-target="#collapse-689">-->
-                                                                    <!--One morning, when Gregor Samsa?<span-->
-                                                                        <!--class="plus-minus"><span-->
-                                                                        <!--class="ti ti-angle-up"></span></span>-->
-                                                                <!--</a>-->
-                                                            <!--</h5>-->
-                                                        <!--</div>-->
-                                                        <!--<div id="collapse-689" class="collapse "-->
-                                                             <!--data-parent="#accordion-765">-->
-                                                            <!--<div class="card-body">-->
-                                                                <!--<p>ICO Crypto - is unique platform; that is secure,-->
-                                                                    <!--smart and easy-to-use platform, and completely-->
-                                                                    <!--disrupting the way businesses raise capital.</p>-->
-                                                            <!--</div>-->
-                                                        <!--</div>-->
-                                                    <!--</div>-->
-                                                <!--</div>-->
-
-                                            <!--</div>-->
-                                        <!--</div>-->
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="wpb_column vc_column_container vc_col-sm-12   vc_col-md-6">
+                <div class="vc_column-inner ">
+                    <div class="wpb_wrapper" style="margin-top: 17%;">
+                        <img src="FAQ-1-01.jpg">
                     </div>
                 </div>
             </div>
