--- a/index.html
+++ b/index.html
@@ -1321,11 +1321,9 @@
                     </div>
                 </div>
             </div>
-            <div class="wpb_column vc_column_container vc_col-sm-12   vc_col-md-6">
-                <div class="vc_column-inner ">
-                    <div class="wpb_wrapper" style="margin-top: 17%;">
+            <div class="wpb_column vc_column_container vc_col-sm-12   vc_col-md-6" style="position: relative;">
+                <div class="vc_column-inner faq_img" style="position: absolute; top: 50%; transform: translate(0,-50%);">
                         <img src="FAQ-1-01.jpg">
-                    </div>
                 </div>
             </div>
         </div>
