--- a/index.html
+++ b/index.html
@@ -874,6 +874,23 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="wpb_column vc_column_container vc_col-sm-6 vc_col-md-3">
+                                <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                        <div class="team-circle text-center">
+                                            <div class="team-photo">
+                                                <img src="Moderator.png" alt="">
+                                                <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"
+                                                      class="expand-trigger content-popup"></span></div>
+                                            <div class="team-info">
+                                                <h5 class="team-name">Moderator</h5>
+                                                <span class="team-title">Rajesh Kumar @Rajesh</span>
+                                            </div>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <!--<div class="wpb_text_column wpb_content_element  text-center">-->
                         <!--<div class="wpb_wrapper">-->
