--- a/index.html
+++ b/index.html
@@ -883,8 +883,8 @@
                                                 <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"
                                                       class="expand-trigger content-popup"></span></div>
                                             <div class="team-info">
-                                                <h5 class="team-name">Moderator</h5>
-                                                <span class="team-title">Rajesh Kumar @Rajesh</span>
+                                                <h5 class="team-name">Rajesh Kumar</h5>
+                                                <span class="team-title">Moderator @Rajesh</span>
                                             </div>
                                         </div>
 
