--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
 <section id="faqs" class="vc_rows wpb_row vc_row-fluid section-pad no-pb">
     <div class="container">
         <div class="row">
-            <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-lg-offset-3 vc_col-lg-6 vc_col-md-offset-2 vc_col-md-8">
+            <div class="wpb_column vc_column_container vc_col-sm-12  vc_col-md-offset-2 vc_col-md-8">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="section-head text-center">
@@ -1052,6 +1052,7 @@
                             <!--<p>Below we’ve provided a bit of ICO, ICO Token, cryptocurrencies, and few others. If you have any other questions, please get in touch using the contact form below.</p>-->
 
                             <!--</div>-->
+                            <img src="FAQ-1-01.jpg">
                         </div>
                     </div>
                 </div>
@@ -1063,7 +1064,7 @@
 <section class="vc_rows wpb_row vc_row-fluid section-bg-alt">
     <div class="container">
         <div class="row">
-            <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-md-6">
+            <div class="wpb_column vc_column_container vc_col-sm-12 vc_col-md-offset-2 vc_col-md-8">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
                         <div class="vc_tta-container" data-vc-action="collapse">
@@ -1353,11 +1354,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="wpb_column vc_column_container vc_col-sm-12   vc_col-md-6" style="position: relative;">
-                <div class="vc_column-inner faq_img" style="position: absolute; top: 55%; transform: translate(0,-50%);">
-                        <img src="FAQ-1-01.jpg">
                 </div>
             </div>
         </div>
