--- a/index.html
+++ b/index.html
@@ -460,6 +460,41 @@
     </div>
     <div class="clearfix"></div>
 </section>
+<section id="applications" class="vc_rows wpb_row vc_row-fluid section-pad section-bg section-connect">
+    <div class="container">
+        <div class="row">
+            <div class="wpb_column vc_column_container vc_col-sm-12">
+                <div class="vc_column-inner ">
+                    <div class="wpb_wrapper">
+                        <div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1520830144361">
+                            <div class="wpb_column vc_column_container vc_col-sm-12">
+                                <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+                                        <div class="section-head text-center">
+                                            <h2>Powerful Infrastructure for Decentralized Applications</h2>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="vc_row wpb_row vc_inner vc_row-fluid">
+                            <div class="wpb_column vc_column_container vc_col-sm-12">
+                                <div class="vc_column-inner ">
+                                    <div class="wpb_wrapper">
+
+                                        <img src="applications.jpg" style="text-align: center;">
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="clearfix"></div>
+</section>
 <section id="application" class="vc_rows wpb_row vc_row-fluid section section-pad section-bg-btoa">
     <div class="container">
         <div class="row">
@@ -896,7 +931,7 @@
                                     <div class="wpb_wrapper">
                                         <div class="team-circle text-center">
                                             <div class="team-photo">
-                                                <img src="Brandon.jpg" alt="">
+                                                <img src="Brandon%20.jpg" alt="">
                                                 <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"
                                                       class="expand-trigger content-popup"></span></div>
                                             <div class="team-info">
