--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
                                     <div class="wpb_wrapper">
                                         <div class="team-circle text-center">
                                             <div class="team-photo">
-                                                <img src="Brandon%20.jpg" alt="">
+                                                <img src="Brandon.jpg" alt="">
                                                 <span data-mfp-src="http://wpdemo.oceanthemes.net/icos/team/gabriel-bernal/"
                                                       class="expand-trigger content-popup"></span></div>
                                             <div class="team-info">
