--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                                 <div class="vc_column-inner ">
                                     <div class="wpb_wrapper">
 
-                                        <img src="applications.jpg" style="text-align: center;">
+                                        <a href=""><img src="applications.jpg" style="text-align: center;"></a>
 
                                     </div>
                                 </div>
@@ -1074,10 +1074,11 @@
                 <div class="wpb_column vc_column_container vc_col-sm-5 vc_col-sm-offset-1">
                     <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
-                            <div class="wpb_text_column wpb_content_element  text-block">
-                                <div class="wpb_wrapper">
-                                    <p style="text-align: center;">(Coming Soon)</p>
-                                </div>
+                            <div class="wpb_single_image wpb_content_element vc_align_center">
+
+                                <figure class="wpb_wrapper vc_figure">
+                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="Miningblack.jpg" class="vc_single_image-img attachment-full" alt="" srcset="Miningblack.jpg 900w, Miningblack.jpg 300w, Miningblack.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
+                                </figure>
                             </div>
                         </div>
                     </div>
