--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vc_row wpb_row vc_inner vc_row-fluid vc_row-o-equal-height vc_row-o-content-middle vc_row-flex">
+            <div class="vc_row wpb_row vc_inner vc_row-fluid vc_row-o-equal-height vc_row-o-content-middle vc_row-flex" style="margin-top: 2%;">
                 <div class="res-m-btm wpb_column vc_column_container vc_col-sm-6">
                     <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
@@ -1077,7 +1077,7 @@
                             <div class="wpb_single_image wpb_content_element vc_align_center">
 
                                 <figure class="wpb_wrapper vc_figure">
-                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="Miningblack.jpg" class="vc_single_image-img attachment-full" alt="" srcset="Miningblack.jpg 900w, Miningblack.jpg 300w, Miningblack.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
+                                    <div class="vc_single_image-wrapper   vc_box_border_grey"><img width="900" height="675" src="Mining_black.jpg" class="vc_single_image-img attachment-full" alt="" srcset="Mining_black.jpg 900w, Mining_black.jpg 300w, Mining_black.jpg 768w" sizes="(max-width: 900px) 100vw, 900px"></div>
                                 </figure>
                             </div>
                         </div>
