--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                         <div class="wpb_wrapper">
                             <div class="wpb_text_column wpb_content_element  header-image">
                                 <div class="wpb_wrapper" style="text-align: center;">
-                                    <p><img src="AceD-01.jpg" alt="header" style="width: 87%;max-width: 631px;"><br>
+                                    <p><img src="AceD-01.png" alt="header" style="width: 87%;max-width: 631px;"><br>
                                         <!--<img class="header-image-icon left-icon" src="header-icon-a.png" alt="header-icon"><br>-->
                                         <!--<img class="header-image-icon right-icon" src="header-icon-b.png" alt="header-icon"></p>-->
 
