--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                         <div class="wpb_wrapper">
                             <div class="wpb_text_column wpb_content_element  header-image">
                                 <div class="wpb_wrapper" style="text-align: center;">
-                                    <p><img src="AceD-01.gif" alt="header" style="width: 87%;max-width: 401px;"><br>
+                                    <p><img src="topright_logo.gif" alt="header" style="width: 87%;max-width: 401px;"><br>
                                 </div>
                             </div>
                         </div>
