--- a/index.html
+++ b/index.html
@@ -1222,6 +1222,25 @@
             <div class="wpb_column vc_column_container vc_col-sm-12">
                 <div class="vc_column-inner ">
                     <div class="wpb_wrapper">
+                        <div class="section-head text-center" style="margin-bottom: 11%;">
+                            <h2 class="section-title" >Twitter Feed<span>TWITTER</span></h2>
+                        </div>
+                    </div>
+                    <div class="wpb_wrapper cotwitter">
+                        <a class="twitter-timeline" href="https://twitter.com/AcedCoin?ref_src=twsrc%5Etfw">Tweets by AcedCoin</a>
+                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="contact" class="vc_rows wpb_row vc_row-fluid section-pad section-bg-alt">
+    <div class="container">
+        <div class="row">
+            <div class="wpb_column vc_column_container vc_col-sm-12">
+                <div class="vc_column-inner ">
+                    <div class="wpb_wrapper">
                         <div class="vc_row wpb_row vc_inner vc_row-fluid">
                             <div class="wpb_column vc_column_container vc_col-sm-12">
                                 <div class="vc_column-inner ">
@@ -1565,10 +1584,5 @@ var mc4wp_forms_config = [];
         jQuery("#popuplink").fancybox({modal:true, maxWidth: 600, overlay : {closeClick : true}});
     });
 </script>
-
-<!--
-Performance optimized by W3 Total Cache. Learn more: https://www.w3-edge.com/products/
-
-Served from: wpdemo.oceanthemes.net @ 2018-05-05 23:22:42 by W3 Total Cache
---></body>
+</body>
 </html>
