--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <div class="wpb_wrapper">
                             <div class="wpb_text_column wpb_content_element  vc_custom_1520825700169">
                                 <div class="wpb_wrapper">
-                                    <h1>Value in Anonymity, Decentralized Masternodes.</h1>
+                                    <h1 style="    color: #d9b169;">Value in Anonymity. Decentralized Masternodes.</h1>
                                     <p class="lead color-secondary">Privacy oriented platform, providing best in
                                         class anonymity for users and their transactions.</p>
                                     <ul class="btns">
