--- a/index.html
+++ b/index.html
@@ -640,7 +640,10 @@
                             <div class="wpb_column vc_column_container vc_col-sm-12">
                                 <div class="vc_column-inner ">
                                     <div class="wpb_wrapper">
-                                        <img src="Roadmap.jpg" style="text-align: center;">
+                                        <!--<img src="Roadmap.jpg" style="text-align: center;">-->
+                                        <video width="100%" height="auto" autoplay loop>
+                                            <source src="roadmap.webm" type="video/mp4">
+                                        </video>
                                     </div>
                                 </div>
                             </div>
