--- a/index.html
+++ b/index.html
@@ -641,8 +641,11 @@
                                 <div class="vc_column-inner ">
                                     <div class="wpb_wrapper">
                                         <!--<img src="Roadmap.jpg" style="text-align: center;">-->
-                                        <video width="100%" height="auto" autoplay loop>
-                                            <source src="roadmap.webm" type="video/mp4">
+                                        <video width="100%" height="auto" playsinline autoplay loop muted>
+                                            <source type="video/webm" src="roadmap.webm" >
+                                        </video>
+                                        <video playsinline autoplay loop muted style="width:100%;height:auto;" >
+                                            <source type="video/webm" src="//bg.cdn.ustudio.com/app/transcodes/TuX1xml2yZsS.webm">
                                         </video>
                                     </div>
                                 </div>
