--- a/index.html
+++ b/index.html
@@ -639,10 +639,10 @@
                         <div class="vc_row wpb_row vc_inner vc_row-fluid">
                             <div class="wpb_column vc_column_container vc_col-sm-12">
                                 <div class="vc_column-inner ">
-                                    <div class="wpb_wrapper">
-                                        <!--<img src="Roadmap.jpg" style="text-align: center;">-->
+                                    <div class="wpb_wrapper coroadmap">
+                                        <img src="roadmap_mobile.gif" style="text-align: center; width: 100%;">
                                         <video width="100%" height="auto" playsinline autoplay loop muted>
-                                            <source type="video/mp4" src="roadmap.mp4" >
+                                            <source type="video/webm" src="roadmap.webm" >
                                         </video>
                                     </div>
                                 </div>
