--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                                 <h2>What is AceD?</h2>
                                 <p class="lead">AceD is a decentralized cryptocurrency that uses peer-to-peer
                                     technology to operate with no central authority or banks.</p>
-                                <p class="lead">AceD aims to build a platform with a decentralized blockchain that
-                                    provides anonymity for its users and their transactions.</p>
+                                <p class="lead">AceD - Powerful Infrastructure for Decentralized Applications.</p>
+                                <p class="lead">AceD bases it's fundamentals in providing an alternative to existing centralized systems through the blockchain. Other than most cryptocurrencies that just provide anonymity, AceD plans on developing a Privacy Orientated Platform where the possibilities are endless. And not to mention these implementations can be voted on through proposals with their Governance model forked from Dash and Polis allowing any team members to be constantly self funded.</p>
                             </div>
                         </div>
 
